FullQa New/src/Adobe Sign/objects/Agreement_Template__c.object
<CustomObject>
    <customHelpPage>EchoSignUserGuide</customHelpPage>
    <description>Agreement Templates allow you to predefine default settings and options for your agreements which can save you time and help minimize errors.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Set the Salesforce ID of the account record which the agreement should look up to.</description>
        <inlineHelpText>Set the Salesforce ID of the account record which the agreement should look up to.</inlineHelpText>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically send the agreement without displaying the send page. (e.g. triggered workflows) Make sure to add a recipient and a file attachment if using this option.</description>
        <inlineHelpText>Automatically send the agreement without displaying the send page. (e.g. triggered workflows) Make sure to add a recipient and a file attachment if using this option.</inlineHelpText>
        <label>Auto Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatic_Reminders__c</fullName>
        <description>Send automatic reminders to signers.</description>
        <inlineHelpText>Send automatic reminders to signers.</inlineHelpText>
        <label>Automatic Reminders</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Every Day, Until Signed</fullName>
                </value>
                <value>
                    <fullName>Every Week, Until Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>Set the Salesforce ID of the contract record which the agreement should look up to.</description>
        <inlineHelpText>Set the Salesforce ID of the contract record which the agreement should look up to.</inlineHelpText>
        <label>Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the data mapping to map EchoSign field inputs from the signed agreement back into Salesforce.</description>
        <inlineHelpText>Select the data mapping to map EchoSign field inputs from the signed agreement back into Salesforce.</inlineHelpText>
        <label>Data Mapping</label>
        <referenceTo>SIGN_Data_Mapping__c</referenceTo>
        <relationshipLabel>Agreement Templates</relationshipLabel>
        <relationshipName>Agreement_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Until_Expiration__c</fullName>
        <description>Set the number of days before the agreement expires.</description>
        <inlineHelpText>Set the number of days before the agreement expires.</inlineHelpText>
        <label>Days Until Expiration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set as default template for new agreements.</description>
        <inlineHelpText>Set as default template for new agreements.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Copy_To__c</fullName>
        <description>Send copies of the agreement to the specified email addresses.</description>
        <inlineHelpText>Send copies of the agreement to the specified email addresses.</inlineHelpText>
        <label>Email Copy To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hosted_Signing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable hosted in-person signing.</description>
        <inlineHelpText>Enable hosted in-person signing.</inlineHelpText>
        <label>Enable Hosted Signing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Select the language of the recipients.</description>
        <inlineHelpText>Select the language of the recipients.</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese (China)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Taiwan)</fullName>
                </value>
                <value>
                    <fullName>Danish (Denmark)</fullName>
                </value>
                <value>
                    <fullName>Dutch (Netherlands)</fullName>
                </value>
                <value>
                    <fullName>English (United Kingdom)</fullName>
                </value>
                <value>
                    <fullName>English (United States)</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Finnish (Finland)</fullName>
                </value>
                <value>
                    <fullName>French (France)</fullName>
                </value>
                <value>
                    <fullName>German (Germany)</fullName>
                </value>
                <value>
                    <fullName>Icelandic (Iceland)</fullName>
                </value>
                <value>
                    <fullName>Italian (Italy)</fullName>
                </value>
                <value>
                    <fullName>Japanese (Japan)</fullName>
                </value>
                <value>
                    <fullName>Korean (South Korea)</fullName>
                </value>
                <value>
                    <fullName>Norwegian (Norway)</fullName>
                </value>
                <value>
                    <fullName>Polish (Poland)</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Portugal)</fullName>
                </value>
                <value>
                    <fullName>Russian (Russia)</fullName>
                </value>
                <value>
                    <fullName>Spanish (Spain)</fullName>
                </value>
                <value>
                    <fullName>Swedish (Sweden)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Object_Type__c</fullName>
        <description>Specify the Salesforce object that will be referenced for this agreement template. (e.g. Opportunity, Lead)</description>
        <inlineHelpText>Specify the Salesforce object that will be referenced for this agreement template. (e.g. Opportunity, Lead)</inlineHelpText>
        <label>Master Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the merge mapping to merge Salesforce fields into the EchoSign agreement before it is sent for signature.</description>
        <inlineHelpText>Select the merge mapping to merge Salesforce fields into the EchoSign agreement before it is sent for signature.</inlineHelpText>
        <label>Merge Mapping</label>
        <referenceTo>SIGN_Merge_Mapping__c</referenceTo>
        <relationshipLabel>Agreement Templates</relationshipLabel>
        <relationshipName>Agreement_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Enter a message that will be sent to the recipients.</description>
        <inlineHelpText>Enter a message that will be sent to the recipients.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <defaultValue>&quot;EchoSign Agreement&quot;</defaultValue>
        <description>Enter a name for the agreement.</description>
        <inlineHelpText>Enter a name for the agreement.</inlineHelpText>
        <label>Agreement Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Set the Salesforce ID of the opportunity record which the agreement should look up to.</description>
        <inlineHelpText>Set the Salesforce ID of the opportunity record which the agreement should look up to.</inlineHelpText>
        <label>Opportunity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Enter a password that you want the recipient to input.</description>
        <inlineHelpText>Enter a password that you want the recipient to input.</inlineHelpText>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Prefer_Fax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When sending an agreement for written signature, use the fax number for the contact if available</description>
        <inlineHelpText>When sending an agreement for written signature, use the fax number for the contact if available</inlineHelpText>
        <label>Use Fax Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preview_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable signers to preview and position fields on the document before agreement is sent for signature.</description>
        <inlineHelpText>Enable signers to preview and position fields on the document before agreement is sent for signature.</inlineHelpText>
        <label>Enable Preview and Position Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sender_User__c</fullName>
        <description>When the agreement is auto sent or sent using an automated workflow, the agreement will be sent on behalf of the user specified by this field. If not specified, the current context user will be used as usual.</description>
        <inlineHelpText>When the agreement is auto sent or sent using an automated workflow, the agreement will be sent on behalf of the user specified by this field. If not specified, the current context user will be used as usual.</inlineHelpText>
        <label>Send On Behalf Of</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sign_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set a password the recipient needs to enter to sign the agreement.</description>
        <inlineHelpText>Set a password the recipient needs to enter to sign the agreement.</inlineHelpText>
        <label>Password to Sign Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_Order__c</fullName>
        <description>Enable the sender to also sign the agreement by selecting a signature order.</description>
        <inlineHelpText>Enable the sender to also sign the agreement by selecting a signature order.</inlineHelpText>
        <label>Sender Signature Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recipients sign first, then sender signs</fullName>
                </value>
                <value>
                    <fullName>Sender signs first, then recipients sign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature_Type__c</fullName>
        <description>Send for electronic signature or request written signature returned by fax.</description>
        <inlineHelpText>Send for electronic signature or request written signature returned by fax.</inlineHelpText>
        <label>Signature Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>e-Signature</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Written Signature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggest_Revisions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Give signers the option to suggest revisions to agreements.</description>
        <inlineHelpText>Give signers the option to suggest revisions to agreements.</inlineHelpText>
        <label>Allow Signers to Suggest Revisions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set a password the recipient needs to enter to open a PDF of the agreement.</description>
        <inlineHelpText>Set a password the recipient needs to enter to open a PDF of the agreement.</inlineHelpText>
        <label>Password to Open PDF Agreement</label>
        <type>Checkbox</type>
    </fields>
    <label>Agreement Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agreement Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Maximum_Expiration_Days</fullName>
        <active>true</active>
        <errorConditionFormula>Days_Until_Expiration__c &gt; 180</errorConditionFormula>
        <errorMessage>There is a maximum of 180 days before document expiration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Written_Without_Revisions</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Signature_Type__c) = &apos;Written Signature&apos; &amp;&amp; Suggest_Revisions__c</errorConditionFormula>
        <errorMessage>Suggesting revisions is not possible with a written signature.</errorMessage>
    </validationRules>
</CustomObject>